syntax = "proto3";

// Package Highway is used for defining a Highway node and its properties.
package highway.v1;
import "channel/channel.proto";
import "channel/tx.proto";
import "bucket/tx.proto";
import "object/tx.proto";
import "registry/tx.proto";
import "v1/request.proto";
import "v1/response.proto";

option go_package = "github.com/sonr-io/sonr/highway/v1";

// HighwayService is a RPC service for interfacing over the Highway node.
service HighwayService {
  // AccessName returns details and publicly available information about the Peer given calling node
  // has permission to access. i.e "prad.snr" -> "firstname online profilePic city"
  rpc AccessName(highway.v1.AccessNameRequest) returns (highway.v1.AccessNameResponse) {
  }

  // RegisterName registers a new ".snr" name for the calling node. It is only allowed to be called
  // once per node.
  rpc RegisterName(sonrio.sonr.registry.MsgRegisterName) returns (sonrio.sonr.registry.MsgRegisterNameResponse) {
  }

  // UpdateName updates the public information of the calling node.
  rpc UpdateName(sonrio.sonr.registry.MsgUpdateName) returns (sonrio.sonr.registry.MsgUpdateNameResponse) {
  }

  // AccessService creates a new signing key for the calling node in order to be authorized to
  // access the service. It is only allowed to be called once per node.
  rpc AccessService(highway.v1.AccessServiceRequest) returns (highway.v1.AccessServiceResponse) {
  }

  // RegisterService registers a new service for the calling node. The calling node must have
  // already been enabled for development.
  rpc RegisterService(sonrio.sonr.registry.MsgRegisterService) returns (sonrio.sonr.registry.MsgRegisterServiceResponse) {
  }

  // UpdateService updates the details and public configuration of the calling node's service.
  rpc UpdateService(sonrio.sonr.registry.MsgUpdateService) returns (sonrio.sonr.registry.MsgUpdateServiceResponse) {
  }

  // CreateChannel creates a new Publish/Subscribe topic channel for the given service.
  // The calling node must have already registered a service for the channel.
  rpc CreateChannel(sonrio.sonr.channel.MsgCreateChannel) returns (sonrio.sonr.channel.MsgCreateChannelResponse) {
  }

  // ReadChannel lists all peers subscribed to the given channel, and additional details about
  // the channels configuration.
  rpc ReadChannel(sonrio.sonr.channel.MsgReadChannel) returns (sonrio.sonr.channel.MsgReadChannelResponse) {
  }

  // UpdateChannel updates the configuration of the given channel.
  rpc UpdateChannel(sonrio.sonr.channel.MsgUpdateChannel) returns (sonrio.sonr.channel.MsgUpdateChannelResponse) {
  }

  // DeleteChannel deletes the given channel if the calling node is the owner of the channel.
  rpc DeleteChannel(sonrio.sonr.channel.MsgDeleteChannel) returns (sonrio.sonr.channel.MsgDeleteChannelResponse) {
  }

  // ListenChannel subscribes the calling node to the given channel and returns all publish events
  // as a stream.
  rpc ListenChannel(highway.v1.ListenChannelRequest) returns (stream sonrio.sonr.channel.ChannelMessage) {
  }

  // CreateBucket creates a new bucket for the calling nodes service.
  rpc CreateBucket(sonrio.sonr.bucket.MsgCreateBucket) returns (sonrio.sonr.bucket.MsgCreateBucketResponse) {
  }

  // ReadBucket lists all the blobs in the given bucket. The calling node must have access to the
  // bucket.
  rpc ReadBucket(sonrio.sonr.bucket.MsgReadBucket) returns (sonrio.sonr.bucket.MsgReadBucketResponse) {
  }

  // UpdateBucket updates the configuration of the given bucket. The calling node must have access
  // to the bucket.
  rpc UpdateBucket(sonrio.sonr.bucket.MsgUpdateBucket) returns (sonrio.sonr.bucket.MsgUpdateBucketResponse) {
  }

  // DeleteBucket deletes the given bucket if the calling node is the owner of the bucket.
  rpc DeleteBucket(sonrio.sonr.bucket.MsgDeleteBucket) returns (sonrio.sonr.bucket.MsgDeleteBucketResponse) {
  }

  // ListenBucket subscribes the calling node to the given bucket and returns all publish events
  // as a stream.
  rpc ListenBucket(highway.v1.ListenBucketRequest) returns (stream highway.v1.ListenBucketResponse) {
  }

  // CreateObject defines a new object to be utilized by the calling node's service. The object will
  // be placed in the Highway Service Graph and can be used in channels and other modules.
  rpc CreateObject(sonrio.sonr.object.MsgCreateObject) returns (sonrio.sonr.object.MsgCreateObjectResponse) {
  }

  // ReadObject returns the details of the given object provided its DID or Label.
  rpc ReadObject(sonrio.sonr.object.MsgReadObject) returns (sonrio.sonr.object.MsgReadObjectResponse) {
  }

  // UpdateObject modifies the property fields of the given object.
  rpc UpdateObject(sonrio.sonr.object.MsgUpdateObject) returns (sonrio.sonr.object.MsgUpdateObjectResponse) {
  }

  // DeleteObject deletes the given object if the calling node is the owner of the object.
  rpc DeleteObject(sonrio.sonr.object.MsgDeleteObject) returns (sonrio.sonr.object.MsgDeleteObjectResponse) {
  }

  // UploadBlob uploads a file or buffer to the calling node's service IPFS storage.
  rpc UploadBlob(highway.v1.UploadBlobRequest) returns (stream highway.v1.UploadBlobResponse) {
  }

  // DownloadBlob downloads a file or buffer from the calling node's service IPFS storage.
  rpc DownloadBlob(highway.v1.DownloadBlobRequest) returns (stream highway.v1.DownloadBlobResponse) {
  }

  // SyncBlob synchronizes a local file from the calling node to the given service's IPFS storage.
  rpc SyncBlob(highway.v1.SyncBlobRequest) returns (stream highway.v1.SyncBlobResponse) {
  }

  // DeleteBlob deletes the given file from the calling node's service IPFS storage.
  rpc DeleteBlob(highway.v1.DeleteBlobRequest) returns (highway.v1.DeleteBlobResponse) {
  }

  // ParseDid parses a potential DID string into a DID object.
  rpc ParseDid(highway.v1.ParseDidRequest) returns (highway.v1.ParseDidResponse) {
  }

  // ResolveDid resolves a DID to its DID document if the DID is valid and the calling node has
  // access to the DID Document.
  rpc ResolveDid(highway.v1.ResolveDidRequest) returns (highway.v1.ResolveDidResponse) {
  }
}
