/// This file contains service for the Node RPC Server
syntax = "proto3";

// Package Highway is used for defining a Highway node and its properties.
package highway.v1;
import "bucket/bucket.proto";
import "object/object.proto";
option go_package = "github.com/sonr-io/sonr/highway/v1";

// AccessNameRequest is a request to get details from the ".snr" name of a peer
message AccessNameRequest {
  // The name of the peer to get the details from
  string name = 1;

  // The public key of the peer to get the details from
  string public_key = 3; // optional
}

// AccessServiceRequest is a request to get the service details of a peer
message AccessServiceRequest {
  // The name of the peer to get the service details of
  string did = 1;

  // The metadata for any service information required
  map<string, string> metadata = 2; // optional
}

// ListenChannelRequest is the request to subscribe to a channel
message ListenChannelRequest {
  // Name is the name of the channel
  string did = 1;

  // Metadata is additional metadata for the channel
  map<string, string> metadata = 2; // optional
}

// ListenBucketRequest is the request to subscribe to a bucket
message ListenBucketRequest {
  // DID is the DID of the bucket
  string did = 1;

  // Metadata is the metadata of the bucket thats being listened to
  map<string, string> metadata = 2; // optional
}

// UploadBlobRequest is the request to upload a blob
message UploadBlobRequest {
  // Label is the label of the blob
  string label = 1;

  // Path is the path of the blob
  string path = 2;

  // Bucket or object DID where the blob is being uploaded to
  string ref_did = 3;

  // Size is the size of the blob
  int64 size = 4;

  // LastModified is the last modified time of the blob
  int64 last_modified = 5;
}

// DownloadBlobRequest is the request to download a blob
message DownloadBlobRequest {
  // DID is the identifier of the blob
  string did = 1;

  // Out Path is the download path of the blob
  string out_path = 2;
}

// SyncBlobRequest is the request to sync a blob
message SyncBlobRequest {
  // DID is the identifier of the blob
  string did = 1;

  // Path is the location of the blob
  string path = 2;

  int32 timeout = 3; // optional
}

// DeleteBlobRequest is the request to delete a blob
message DeleteBlobRequest {
  // DID is the identifier of the blob
  string did = 1;

  // Metadata is the metadata of the blob thats being deleted
  map<string, string> metadata = 2;

  // Public key of the node that is deleting the blob
  string public_key = 3;
}

// ParseDidRequest is the request to convert a string to a DID object
message ParseDidRequest {
  // DID is the DID of the DID
  string did = 1;

  // Metadata is the metadata of the blob thats being deleted
  map<string, string> metadata = 2;
}

// ResolveDidRequest is the request to resolve a DID
message ResolveDidRequest {
  // DID is the DID of the DID
  string did = 1;

  // Metadata is the metadata of the blob thats being deleted
  map<string, string> metadata = 2;
}
