/// This file contains service for the Node RPC Server
syntax = "proto3";

// Package Highway is used for defining a Highway node and its properties.
package highway.v1;
import "registry/peer.proto";
import "registry/did.proto";
import "object/object.proto";

option go_package = "github.com/sonr-io/sonr/highway/v1";

// AccessNameResponse is a response to a request for a name
message AccessNameResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // Data of the response
    sonrio.sonr.registry.Peer peer = 3;
}
// AccessServiceResponse is a response to a request for a service
message AccessServiceResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // Data of the response
    map<string, string> metadata = 3;
}

// ListenBucketResponse is a response of the published data to the bucket
message ListenBucketResponse {
    // Code of the response
    int32 code = 1;

    // DID of the response
    sonrio.sonr.registry.Did did = 2;

    // Additional information about the response
    map<string, string> metadata = 3; // optional

    // Stream of objects in the bucket
    repeated sonrio.sonr.object.ObjectDoc objects = 4; // optional
}

// UploadBlobResponse is a response to a request to upload a blob
message UploadBlobResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // DID of the response
    sonrio.sonr.registry.Did did = 3;

    // Pinned is true if the blob is pinned to IPFS
    bool pinned = 4;
}

// DownloadBlobResponse is a response to a request to download a blob
message DownloadBlobResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // DID of the response
    sonrio.sonr.registry.Did did = 3;

    // Path of downloaded blob
    string path = 4;
}

// SyncBlobResponse is a response to a request to sync a blob
message SyncBlobResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // DID of the response
    sonrio.sonr.registry.Did did = 3;
}

// DeleteBlobResponse is a response to a request to delete a blob
message DeleteBlobResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // DID of the response
    sonrio.sonr.registry.Did did = 3;
}

// ParseDidResponse is a response to a request to parse a DID
message ParseDidResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // DID of the response
    sonrio.sonr.registry.Did did = 3;
}

// ResolveDidResponse is a response to a request to resolve a DID
message ResolveDidResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // DID of the response
    sonrio.sonr.registry.DidDocument did_document = 3; // optional
}

