syntax = "proto3";
package sonrio.sonr.bucket;
import "bucket/which_is.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sonr-io/blockchain/x/bucket/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateBucket(MsgCreateBucket) returns (MsgCreateBucketResponse);
  rpc ReadBucket(MsgReadBucket) returns (MsgReadBucketResponse);
  rpc UpdateBucket(MsgUpdateBucket) returns (MsgUpdateBucketResponse);
  rpc DeleteBucket(MsgDeleteBucket) returns (MsgDeleteBucketResponse);
  rpc CreateWhichIs(MsgCreateWhichIs) returns (MsgCreateWhichIsResponse);
  rpc UpdateWhichIs(MsgUpdateWhichIs) returns (MsgUpdateWhichIsResponse);
  rpc DeleteWhichIs(MsgDeleteWhichIs) returns (MsgDeleteWhichIsResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateBucket {
  string creator = 1;
  string label = 2;
  string description = 3;
  string kind = 4;
}

message MsgCreateBucketResponse {
}

message MsgReadBucket {
  string creator = 1;
  string did = 2;
}

message MsgReadBucketResponse {
}

message MsgUpdateBucket {
  string creator = 1;
  string did = 2;
  string label = 3;
  string description = 4;
}

message MsgUpdateBucketResponse {
}

message MsgDeleteBucket {
  string creator = 1;
  string did = 2;
  string publicKey = 3;
}

message MsgDeleteBucketResponse {
}

message MsgCreateWhichIs {
  string creator = 1;
  string index = 2;

  string did = 3;
  string documentJson = 4;
}
message MsgCreateWhichIsResponse {}

message MsgUpdateWhichIs {
  string creator = 1;
  string index = 2;

  string did = 3;
  string documentJson = 4;
}
message MsgUpdateWhichIsResponse {}

message MsgDeleteWhichIs {
  string creator = 1;
  string index = 2;
}
message MsgDeleteWhichIsResponse {}

// this line is used by starport scaffolding # proto/tx/message
